# CameraDecode

./: .gitignore  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  CameraMaui.csproj  CameraMaui.sln  Directory.Build.props  EmguCVTest.cs  IDeviceOrentationService.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  ServiceHelper.cs
CameraMaui.ShapeMatcher/: CameraMaui.ShapeMatcher.csproj  EmguCvExtensions.cs  IShapeBasedMatcher.cs  ManagedShapeMatcher.cs  NativeMethods.cs  ShapeMatcherDetector.cs  ShapeMatcherFactory.cs
NativeLibs/ShapeBasedMatcher/: CMakeLists.txt  build_windows.bat  find_opencv.ps1
NativeLibs/ShapeBasedMatcher/src/: line2Dup.cpp  line2Dup.h  shape_matcher_c_api.cpp  shape_matcher_c_api.h
Pages/: MainPage.xaml  MainPage.xaml.cs  TemplateCreatorPage.xaml  TemplateCreatorPage.xaml.cs
Resources/Styles/: Colors.xaml  Styles.xaml
RingCode/: ArrowTemplateMatcher.cs  RingCodeDecoder.cs  RingImageSegmentation.cs
Services/: IDeviceOrentationService.cs  ServiceHelper.cs
TestArrowDetection/: Program.cs  TestArrowDetection.csproj
